--- a/index.html
+++ b/index.html
@@ -35,5 +35,21 @@
     </div>
     </section>
   </header>
+  <main>
+    <section class="main-section">
+      <div class="main-card">
+        <h2>Alignment & Space</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit placeat sequi vitae quos voluptatem?</p>
+      </div>
+      <div class="main-card">
+        <h2>Tricky positioning</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ratione dolorum voluptatibus saepe consequuntur doloribus.</p>
+      </div>
+      <div class="main-card">
+        <h2>Responsive design</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore sed libero excepturi laboriosam ea.</p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
