--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
   <main>
     <section class="main-section">
       <div class="main-card">
-        <h2>Alignment & Space</h2>
+        <h2><i class="fas fa-arrows-alt-v"></i>Alignment & Space</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit placeat sequi vitae quos voluptatem?</p>
       </div>
       <div class="main-card">
-        <h2>Tricky positioning</h2>
+        <h2><i class="fas fa-arrows-alt"></i>Tricky positioning</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ratione dolorum voluptatibus saepe consequuntur doloribus.</p>
       </div>
       <div class="main-card">
-        <h2>Responsive design</h2>
+        <h2><i class="fas fa-mobile"></i>Responsive design</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore sed libero excepturi laboriosam ea.</p>
       </div>
     </section>
